caas-web/src/main/resources/public/css/table.css
#results_table {
    overflow: scroll;
    max-height: 80%;
}

#div_header, #div_first_col {
    position: fixed;
    visibility: hidden;
    text-align: left;
}

#div_header {
    z-index: 10;
    font-weight: 700;
}

.header_element {
    display: inline-block;
    margin: 0;
    vertical-align: center;
    padding: 10px 8px;
    background-color: #eee;
    border-right: 2px solid white;
}

.server_name {
    padding: 10px 8px;
    border-bottom: 2px solid white;
    border-right: 2px solid white;
}

#div_header_clone {
    visibility: hidden;
}


#div_first_col * {
    height: 100%;
    vertical-align: bottom;
}


thead *, #div_header *, #div_first_col * {
    font-size: 12px;
    line-height: 16px;
    color: black;
}

.server_name.hover {
    background-color: #ccc;
}

tr:hover td {
    background-color: #e0e0e0;
}

tr:hover td.not_found {
    background-color: #c3c3c3;
}

tr:hover > td.passed {
    background-color: #387838;
}

tr:hover > td.failed {
    background-color: #d63939;
}

#div_first_col {
    z-index: 5;
    background: #eee;
    font-size: 12px;
    float: left;
}

table a {
    color: black;
}

#results_table {
    width: 100%;
    box-sizing: border-box;
    border: 1px solid #ccc;
}

table {
    border-collapse: collapse;
    width: 100%;
}

th, td {
    font-size: 12px;
    line-height: 16px;
    border-right: 2px solid white;
    border-bottom: 2px solid white;
    padding: 8px;
    text-align: left;
    vertical-align: top;
}

.fixed-table-container td.text {
    white-space: nowrap !important;
}

.fixed-table-container th {
    background: #eee;
    padding-top: 10px;
    padding-bottom: 10px;
}

.fixed-table-container td:first-child {
    background: #eee;
}

.fixed-table-container tr:hover td:first-child {
    background: #c3c3c3;
}

.fixed-table-container tr:last-child td {
    border-bottom: 0;
}

.fixed-table-container th:last-child,
.fixed-table-container td:last-child {
    border-right: 0;
}

#cover_table_hack {
    position: absolute;
    top: 80px;
    height: 10px;
    z-index: 100;
    width: 100%;
    background-color: #fafafa;
    display: block;
}

body {
    margin: 0;
}

div {
    overflow: hidden;
}

footer {
    position: absolute;
    display: block;
    padding-top: 10px;
    z-index: 100;
    background-color: #fafafa;
    margin: 0px;
}

